# toody-engine

./: -O0  .clang-format  .clang-format.yml  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  clang-format.yml  imgui.ini  iwyu_mapping.imp  makefile  program_database.s3db  readme.md  test_compiler.cpp  valgrind-out.txt  warning.txt
data/: tilemap.txt  window.txt
data/databases/: game.db
data/resources/: window.txt
docs/: imgui_demo.cpp
documentation/: imgui_demo.cpp
includes/GLAD/: glad.h
libHeaders/GLAD/: glad.c  glad.h
libHeaders/IMGUI/: imconfig.h
resources/: model_3d.blend
resources/shaders/: shader.frag  shader.vert  shape_shader.vert
ressources/: tilemap.txt  window.txt
shaders/: shader.frag  shader.vert
sources/: main.cpp
sources/3D_model/: assimp.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
sources/application/: configuration.cpp  configuration.hpp  resources.cpp  resources.hpp
sources/collision2D/: collision_list.hpp
sources/component/: component.cpp  component.hpp  component.tpp  contexts.cpp  contexts.hpp  transformable2D.cpp  transformable2D.hpp
sources/components/: component.cpp  component.hpp  component.tpp  contexts.cpp  contexts.hpp  transformable2D.cpp  transformable2D.hpp
sources/contexts/: base_context.cpp  base_context.hpp  game_context.cpp  game_context.hpp  render_context.cpp  render_context.hpp  update_context.cpp  update_context.hpp
sources/entity/: entity.cpp  entity.hpp  object.cpp  object.hpp  player.cpp  player.hpp
sources/events/: dialogue.cpp  dialogue.hpp
sources/game/: game.cpp  game.hpp  resources.cpp  resources.hpp  settings.cpp  settings.hpp
sources/game_events/: dialogue.cpp  dialogue.hpp
sources/graphics/: camera.cpp  camera.hpp  openGL.cpp  openGL.hpp  sfml.cpp  sfml.hpp  shader.cpp  shape.cpp  shape.hpp  texture.cpp  texture.hpp  transformable.cpp  transformable.hpp
sources/graphics2D/: button.cpp  button.hpp  button_array.cpp  button_array.hpp  cardinal_direction.cpp  cardinal_direction.hpp  collision_list.hpp  color.cpp  color.hpp  component.cpp  component.hpp  component.tpp  constants.hpp  control.cpp  control.hpp  custom_entity.cpp  custom_entity.hpp  image.hpp  image_map.cpp  image_map.hpp  moveable_entity.cpp  moveable_entity.hpp  quad_vertex.cpp  quad_vertex.hpp  sfml.cpp  sfml.hpp  shape.cpp  shape.hpp  static_entity.cpp  static_entity.hpp  tile.cpp  tile.hpp  tile_position.cpp  tile_position.hpp  tile_selector.cpp  tile_selector.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp  (+6 more)
sources/graphics3D/: camera.cpp  camera.hpp  load_shape.cpp  load_shape.hpp  openGL.cpp  openGL.hpp  shader.cpp  shader.hpp  shape.cpp  shape.hpp  shape_builder.cpp  shape_builder.hpp  texture.cpp  texture.hpp  transformable.cpp  transformable.hpp
sources/imgui/: debug_window.cpp  debug_window.hpp  imgui.cpp  imgui.hpp  sub_window.cpp  sub_window.hpp
sources/input/: button.cpp  button.hpp  button_array.cpp  button_array.hpp  input.cpp  input.hpp  mouse_position.hpp  movement_key.cpp  movement_key.hpp
sources/interface/: inputs.cpp  inputs.hpp  keyboard_move.hpp  window.cpp  window.hpp
sources/libraries/: debug_window.cpp  debug_window.hpp  imgui.cpp  imgui.hpp  sub_window.cpp  sub_window.hpp
sources/main/: game.cpp  game.hpp  render.cpp  render.hpp  resources.cpp  resources.hpp  settings.cpp  settings.hpp  window.cpp  window.hpp
sources/maths/: maths.hpp  matrix.cpp  matrix.hpp  numerics.cpp  numerics.hpp  point.hpp  point.tpp  quadrangle.hpp  quadrangle.tpp  rectangle.cpp  rectangle.hpp  rectangle.tpp  segment.hpp  segment.tpp  trigonometry.cpp  trigonometry.hpp  vector2.cpp  vector2.hpp  vector2.tpp  vector3.cpp  vector3.hpp  vector3.tpp
sources/output_info/: information.cpp  information.hpp
sources/project/: main.cpp
sources/ressources_handling/: ressources_init.cpp  ressources_init.hpp  texture_sprite.cpp  texture_sprite.hpp
sources/settings/: settings.cpp  settings.hpp
sources/states/: editor.cpp  editor.hpp  editor_state.cpp  editor_state.hpp  game_state.cpp  game_state.hpp  graphic.cpp  graphic.hpp  graphic_state.cpp  graphic_state.hpp  input.cpp  input.hpp  main_menu.cpp  main_menu.hpp  main_menu_state.cpp  main_menu_state.hpp  state.cpp  state.hpp  test.cpp  test.hpp
sources/tilemap/: editor.cpp  editor.hpp  tile_utility.cpp  tile_utility.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp
sources/tools/: assertion.cpp  assertion.hpp  concepts.hpp  databases.cpp  databases.hpp  enum.hpp  enum_impl.hpp  enumeration.hpp  enumeration.tpp  exceptions.cpp  exceptions.hpp  fmt.hpp  global_variable.hpp  imgui.hpp  json.cpp  json.hpp  maths.cpp  maths.hpp  path.cpp  (+22 more)
tools/: compile_libraries.py  compile_libraries.sh
(+242 files in other folders)
